--- a/preamble_ida13.tex
+++ b/preamble_ida13.tex
@@ -59,7 +59,7 @@
 %%%% CUSTOM SETTINGS %%%%
 
 %%%% New Commands %%%%
-\newcommand{\name}{\#NAME\#}
+\newcommand{\name}{STAlking Regional WhereAbouts Regarding Signalstrength}
 
 % ¤¤ Marginer ¤¤ %
 \setlrmarginsandblock{3.5cm}{2.5cm}{*}		% \setlrmarginsandblock{Indbinding}{Kant}{Ratio}
