Rettelser til synopsis/abstrakt

--- a/formalia/synopsis.tex
+++ b/formalia/synopsis.tex
@@ -1,12 +1,5 @@
-%Indoor positioning systems (IPS) locate objects inside a restricted area, this is typically done via mobile devices such as smart phones and tablets. This is done by using multiple access-points each calculating the distance to the device and with a combined effort positioning the device with high accuracy\cite{WhatIsIPS}. 
+Indoor positioning is one of the fields which there are predicted to advance significantly in the coming years \cite{DonDIndoorIsNext}. In the aSTEP multi-project, our group is concerned with indoor positioning. We have chosen to utilise Cisco MSE \cite{ciscoMSE}, which is available trough the university campus at Aalborg University. From the MSE we are able to extract positions and other related informations about all Wi-Fi devices at the university campus.
 
-Indoor positioning is one of the technologies in which there is predicted to happen a great development in the coming years. In the aSTEP multi-project, our group is concerned with indoor positioning. We have chosen to utilize Cisco, which is available to us at AAU. From Cisco we are able to extract the location and other information about all Wi-Fi devices at AAU.
+Our goals is to deliver indoor position coordinates from Wi-Fi devices to the application developers. To do this we have set up an intermediate server, at the Cisco Administrator's network. It is responsible for extracting data from the MSE, processing it and sending it to a client on the aSTEP server that sends it to the database. We have access to sensitive data such as MAC addresses, and therefore security is a concern. Because of this we will explore possibilities to protect the sensitive data and still make it usable to the application groups.
 
-Our job is to provide the applications dependent on indoor positioning with the coordinates of all devices in the area. For doing this we have set up an intermediate server, at the Cisco Administrators network, which extract data from Cisco, processes it and sends it to a client on the aSTEP server from which it is send to the database. As we have access to sensitive data such as MAC addresses security is a large concern, for which we will explore possibilities in order to further it as much as possible.
-
-We will also explore the possibilities of building or own indoor positioning system capable of locating Wi-Fi devices in the area.
-
-
-%In this multi-project our group is concerned with indoor positioning. Our main task is to provide the applications utilizing indoor positions with information about peoples location in indoor spaces. To do so we have chosen to utilize Cisco, which is available to us at Aalborg University. Cisco is an implemented system at AAU capable of locating Wi-Fi devices via curtain calculations on the Received Signal Strength Indication (RSSI).
-
-%We set up and intermediate server at the Cisco Administrators network in order to retrieve and process data from Cisco. We send the data to a client at the aSTEP server from which the data is sent to the aSTEP database.
+In addition we will explore the possibilities of building or own indoor positioning system, from scratch, capable of locating Wi-Fi devices in the area.
