--- a/formalia/resume.tex
+++ b/formalia/resume.tex
@@ -1,13 +1,13 @@
 \chapter*{Summary}
-In this multi-project our group have been concerned with indoor positioning. Our main task have been to provide the applications utilizing indoor positions with information about peoples location in indoor spaces. We chose to utilize Cisco, which is available to us at Aalborg University. Cisco is an implemented system at AAU capable of locating Wi-Fi devices via certain calculations on the Received Signal Strength Indication (RSSI).
+In this multi-project our group have been concerned with indoor positioning. Our main goal have been to provide the applications utilizing indoor positions with information about peoples location in indoor spaces. We chose to utilize Cisco, which is available at Aalborg University. Cisco is an implemented system at AAU capable of locating Wi-Fi devices via certain calculations on the Received Signal Strength Indication (RSSI).
 
-From Cisco we are able to extract the geographical location of all devices within the perimeter of the system, even if the device is not connected to the network. However, since Cisco grants us access to personal information of all the devices such as the MAC address and if people are logged on to the network their mail. The Cisco administrator asked of us to make this non accessible to anyone, and since it is only accessible through his closed network we put up an intermediate server form which we could obfuscate personal information and had access to retrieve the data from. By doing so not even we are able to access the sensitive information. 
+With Cisco we are able to extract the geographical location of all devices within the boundaries of the system, even if the device is not connected to the network. However since Cisco grants us access to personal information of all the devices such as the MAC address and if people are logged on to the network their mail. The Cisco administrator asked of us to make this non accessible to anyone, and since it is only accessible through his closed network we put up an intermediate server form which we could obfuscate personal information and had access to retrieve the data from. By doing so not even we are able to access the sensitive information. 
 
-As we handle sensitive information a large effort have been put into resurging security. We handle concerns in regard to obfuscating sensitive information however further insurances could have been taken as it will be explained in the rapport.
+As we handle sensitive information a large effort have been put into security. We handle concerns in regard to obfuscating sensitive information however further insurances could have been taken as it will be explained in the rapport.
 
-The data is being put into Java classes on the intermediate server and sent to a client on the aSTEP server upon request. As the data is received by the client it is processed and send to the database, in the same format as that supplied by the outdoor positioning groups, form where it is available to all projects in the multi-project.
+The data converted into Java classes on the intermediate server and sent to a client on the aSTEP server upon request. As the data is received by the client it is processed and send to the database, in the same format as that supplied by the outdoor positioning groups, form where it is available to all projects in the multi-project.
 
-During the rapport we document information gained during each sprint as well as additions and updates made to our system, this means that code snippets described in the first sprint may not be consistent with the code in the final version.
+In the rapport we document information gained during each sprint and updates made to our system, this means that code snippets described in the first sprint may not be consistent with the code in the final version.
 
 In addition we have been working on building our own Indoor Positioning System (IPS) using access points. We ordered different routers and access points to work with. The reason for ordering different hardware was to se if one type would be able to provide a more precise location than the other. We did however run into difficulties in regard to getting the RSSI and were therefore not able to finish this.
 
