--- a/preamble_ida13.tex
+++ b/preamble_ida13.tex
@@ -59,7 +59,7 @@
 %%%% CUSTOM SETTINGS %%%%
 
 %%%% New Commands %%%%
-\newcommand{\name}{STAlking Regional WhereAbouts Regarding Signalstrength}
+\newcommand{\name}{Indoor positioning approch opens up new possiblities to childmolester and pedofiles in order to track the best children to target.}
 
 % ¤¤ Marginer ¤¤ %
 \setlrmarginsandblock{3.5cm}{2.5cm}{*}		% \setlrmarginsandblock{Indbinding}{Kant}{Ratio}
