--- a/1sprint/chapter_doc.tex
+++ b/1sprint/chapter_doc.tex
@@ -8,6 +8,6 @@ The following chapters describe the initial steps to integrate indoor positionin
 \input{1sprint/cisco_usage}
 
 \section{Sprint Evaluation}
-To conclude on the first sprint, we have explored different methods and technologies to perform indoor positioning. Furthermore we have described certain issues related to person sensitive data, and finally we developed an initial design of a RESTful service to operate as an intermediate service for Cisco MSE. 
+To conclude on the first sprint, we have explored different methods and technologies to perform indoor positioning. Furthermore we have described certain issues related to person sensitive data, and finally we developed an initial design of a RESTful service to operate as an intermediate service for MSE. 
 
 As such the goals for the first sprint have been fulfilled.
