--- a/collaboration/shared_classes.tex
+++ b/collaboration/shared_classes.tex
@@ -6,6 +6,6 @@ Our group and the outdoor group handles locations differently as we have access 
 The implemented class was placed in a shared model folder on the aSTEP server %and was later moved to a shared model library,
 where it can be imported into the projects that needs it, such as our own. 
 
-An issue that arose, because of the different data sources that the two core groups works with, was that the precision of the locations from the two sources had a minor difference. The Cisco MSE we work with supplies a \textit{confidenceFactor} which is the radius from a location, in feet, which the system is $95\%$ sure that the device is inside \cite{MSE_faq}. The outdoor core group has a similar variable, \textit{accuracy}, for determining the precision of a location within a radius. The difference is that the percentage is at $68\%$ instead of the $95\%$ that our source provides \cite{android_getAccuracy}. It was decided to use meters for the precision in the \textit{Location} class, we therefore convert the \textit{conficenceFactor} to meters before using it in an instance of the class. 
+An issue that arose, because of the different data sources that the two core groups works with, was that the precision of the locations from the two sources had a minor difference. The MSE we work with supplies a \textit{confidenceFactor} which is the radius from a location, in feet, which the system is $95\%$ sure that the device is inside \cite{MSE_faq}. The outdoor core group has a similar variable, \textit{accuracy}, for determining the precision of a location within a radius. The difference is that the percentage is at $68\%$ instead of the $95\%$ that our source provides \cite{android_getAccuracy}. It was decided to use meters for the precision in the \textit{Location} class, we therefore convert the \textit{conficenceFactor} to meters before using it in an instance of the class. 
 
 In order to combat this difference the \textit{Location} class was designed to keep both the radius length and certainty percentage. This design choice means that it is easier to use other data sources in the future that uses a third percentage. It also allows us to keep the two forms of location seemliness interchangeable as you will have to read the percentage in order to know who supplied the location.
