--- a/formalia/conclusion.tex
+++ b/formalia/conclusion.tex
@@ -1,10 +1,9 @@
 \chapter{Conclusion}
 % Hvad har vi lavet?
-The course of this project has left us with a ILBS which is capable of delivering up to date indoor positioning data intercepted from real mobile devices inside a a set perimeter. This is done by utilising a RESTFful service to communicate with an Cisco MSE service from which we are able to transfer and process the captured location data. After the data is processed it is then send to a database from which other aSTEP developers are responsible for. The data is then requested by the different application and API developer groups.
+In the course of this project we have build an ILBS which is capable of delivering indoor positioning data in real-time from Wi-Fi devices inside a set perimeter. This is done utilising a RESTFful service to communicate with a Cisco MSE service from which we are able to transfer and process the captured data. After the data is processed it is send to a database of which other aSTEP developers are responsible for. The data can then be requested by the different application and API developing groups.
 
 % Sprint 1
-In order to acquire mock data for aSTEP we chose to integrate MSE for the indoor positioning system as it was the most convenient choice. MSE was already installed at campus and the functionality it offers was satisfactory. %sufficient? \Anders
-The data is processed and modified before it reaches the database as we had to obfuscate some of the person sensitive data. It was decided to do so partly because of a request from the campus MSE administrator and due to the Danish law of \textit{Directive on privacy and electronic communications}. As of such it was decided to obfuscate the person sensitive data of those users that did not consent.
+In order to acquire mock data for aSTEP we chose to integrate MSE for the indoor positioning system as it was the most convenient choice. MSE was already installed at campus and the functionality it offers was sufficient to our needs. The data is processed and modified before it reaches the database as we had to obfuscate some of the sensitive personal data. It was decided to do so partly because of a request from the campus MSE administrator and due to the Danish law of \textit{Directive on privacy and electronic communications}. As of such it was decided to obfuscate the person sensitive data of those users that did not consent.
 
 % Sprint 2
 The client that was build is intended for acquiring data from multiple MSE services, as well our intimidate server, and for sending data to the database. The client was designed to be robust and flexible, which was achieved by providing it with mechanisms for handling errors and by implementing a RESTful service for user inputs. 
@@ -16,3 +15,79 @@ The foundation for a small tracking system was laid, with the future goal of bei
 In order to give future students an easier start, when they take ownership of the project, a set of precautions have been made. This involves code documentation, code tests, the section \nameref{sec:catchup} and the various "How-to"s that have been made for this project's wiki at GitLab. 
 
 % Konklussion 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
