--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -40,7 +40,7 @@ This category consists of approaches where the angle of the received signal is m
 \subsubsection*{Location Patterning}
 The location patterning category sets out to measure the connectivity patterns for a set of locations. The most common approach for this category is called WI-FI Fingerprinting. This method has an intial calibration phase, where the RSSI pattern for each point of interest is measured and stored in the system. When the signal strength from a device is received, it is then compared to the previously measured RSSI patterns. The point of interest with the most similar pattern is determined to be the position of the device. This means that a system using fingerprinting can not determine the exact position of a device, but rather calculates a probability that the device is located at a given point of interest \cite{fingerprint1}.
 
-\subsection{Evaluation dimensions}
+\subsection{Evaluation Dimensions}
 When evaluating indoor location services there are three dimensions that we can evaluate quality on: location precision, refresh rate and system latency. Location precision tells us about the location precision that the system affords. Refresh rate is the rate at which the location is updated, and as such how closely the most recent data is related to real-time data. System latency is a dimension describing the time it takes to perform the positioning calculations \cite{dimensions}. These dimensions are not standardized, but we view them as reasonable initial parameters for comparing the systems.
 
 The three dimensions are in no way constant for a system. For most systems, the hardware has a large influence on the dimensions. For instance, location precision for Triangulation is severely diminished if the environment lacks access points. Refresh rate depends on how often mobile devices communicate with the network and system latency can be impacted by a large amount of noise on the WI-FI channels. \Cref{tab:evaluating_approaches} shows the influences for the four tracking approach categories for each evaluation dimension. As the table shows, it is primarily the location precision that has various dependencies across the approaches. The refresh rate will in most cases depend on the interval at which the device communicates, while the system latency entirely depends on the software, hardware and communication protocols used.
