--- a/2sprint/chapter_doc.tex
+++ b/2sprint/chapter_doc.tex
@@ -7,7 +7,7 @@ Since we have chosen to utilize MSE, which is available for us through Aalborg U
 \input{2sprint/client}
 \input{2sprint/unit_test}
 
-\section{Sprint evaluation}\label{sec:s2_eval}
+\section{Sprint Evaluation}\label{sec:s2_eval}
 To perform an evaluation of the sprint we iterate over the sprint goals and comment on whether or not they were fulfilled.
 
 First, we wanted to fetch the data from MSE and send it to the aSTEP database. This goal has only partly been achieved because of several factors. First, it requires an agreement on the schemas of the database for the multi-project, which has not been settled yet. Secondly, we found that the intermediate server requires a few changes, which have not been possible to implement as the Cisco MSE administrator has been unavailable. However, we built a largely finished client service capable of fetching data from different sources and sending it to a database. We cover the implementation of the client in \cref{sec:fetch_data}.
