--- a/4sprint/catch_up.tex
+++ b/4sprint/catch_up.tex
@@ -1,7 +1,7 @@
 \section{Catching Up - Introduction to Using Our Project}\label{sec:catchup}
 This section will contain guides describing what elements to be aware of in the system and how to perform different tasks for maintenance and further development. We write this section to ease the change of ownership, such that the new owners can avoid problems we experienced and spent time resolving. 
 
-\subsection*{Transfering a Program to the Virtual Server}
+\subsection*{Transferring a Program to the Virtual Server}
 We recommend testing new changes as thoroughly as possible before going through this as this process is tiresome to do a lot. Before doing this you need to contact the Cisco MSE administrator of AAU and ask for passwords for the virtual proxy server and MSE. The current administrator is Per Mejdal Rasmussen from ITS. Let him know that you are continuing development of the proxy server connecting us to MSE.
 
 Sending the Java program to the virtual intermediate server:
