ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - ANDERS DU SKAL SKRIVE OM MERGE I FORHOLD TIL GITLAB - AN

--- a/collaboration/aSTEP_meetings.tex
+++ b/collaboration/aSTEP_meetings.tex
@@ -1,12 +1,12 @@
 \section{aSTEP Meetings}
 In this section we describe some of the meeting held with other groups in the aSTEP multi-project. The focus will be on the weekly super-group meetings and the smaller meetings held with only a few groups.
 
-\subsection{Super-group Meetings}\label{subsec:supergroup_meetings}
+\subsection*{Super-group Meetings}\label{subsec:supergroup_meetings}
 In the aSTEP multi-project, ten groups are working together to make one large system with multiple applications. To keep track of progress and requirements in regards to individual parts of the system, weekly meetings are held with one representative from each group.
 
 At the super-group meetings our representative has been responsible for taking notes and prepare a summary for everyone to see. During these meetings there is a live chat on Slack \cite{slack}, such that everyone participating in the multi-project can see what is being discussed and add their input if necessary. In March it was decided at a super-group meeting that there should be a mid-sprint meeting, where the goals for the sprint was presented and the progress thereof evaluated.
 
-\subsection{Small Meetings}\label{subsec:small_meetings}
+\subsection*{Small Meetings}\label{subsec:small_meetings}
 In addition to the super-group meetings there are being held smaller meetings, where only a few groups participate, in order to specify needs, present ideas and possible solutions.
 
 We have had multiple of these meetings with respectively the groups responsible for the database, the application group utilizing indoor positioning, the user management group and the other group working with indoor positioning.
