--- a/collaboration/gitlab.tex
+++ b/collaboration/gitlab.tex
@@ -3,7 +3,7 @@ At the aSTEP meeting that took place at 17.02.2016 it was decided that a few peo
 %The purpose of the following section is to describe the work that we have done related to GitLab. 
 The formed GitLab group used Slack to communicate and assign tasks within the group. The different tasks related to GitLab was assigned to the members of the GitLab group.
 
-\subsection{GitLab Update}
+\subsection*{GitLab Update}
 The first task assigned to our group was to update GitLab which is running on the semesters virtual server, hence refereed to as the aSTEP server. It was agreed that the best approach would be to install a virtual server on a computer, to emulate the GitLab update. This was done to ensure that in case the update would fail it could not cause problems to the aSTEP server.
 %The magnitude of this task involves installing a virtual server on a computer to emulate the GitLab update to ensure that if it fails, it will not cause problems to the aSTEP server which is running the actual GitLab service. 
 The reason for updating GitLab is in order to increase performance, which have been achieved for builds as well as runners, push and pull. 
@@ -22,14 +22,8 @@ When the backup is extracted the next step is then to update GitLab with the new
 
 After this was done a Wiki page was created in the shared GitLab Wiki that would help future semesters in updating GitLab if necessary. The whole process of setting up a virtual test server will not be descried in the Wiki. It was deemed not to be necessary since GitLab have an automatic backup feature.
 
-\subsection{GitLab Merge}
+\subsection*{GitLab Merge}
 \ofx{Can you write an initial section on this Anders?}
 
-\subsection{GitLab group work}
-What were the other members of the GitLab group doing? 
-build
-runner
-
-%Anders Merge request stuff, runners
-%Rune overall håndtering, runners
-%Alex committer en fandens meget!
+\subsection*{GitLab Group Work}
+The group consist of four members, and together we maintained the gitlab server, this include the following tasks; update gitlab, merge request and runners.
